# frankentop

./: .gitattributes  .gitignore  .vale.ini  README.md  cabal.project  flake.nix  garnix.yaml  nix-ci.nix
.config/: mustache.yaml
.config/flake/: outputs.nix
.config/project/: default.nix
.github/: settings.yml
.github/workflows/: build.yml
core/: CHANGELOG.md  README.md  frankentop-chassis.cabal
core/app/: chassis.hs
core/src/Frankentop/: Chassis.hs
