cabal-version: 3.0
-- ^ Cabal 3.0 is the first with the `Universal-FOSS-exception-1.0` SPDX license
--   exception.

name: frankentop-chassis
version: 0.0.1.0
synopsis: Laptop chassis STL generator
description:
  Generates two STL files — chassis_base.stl and chassis_lid.stl — for a
  custom laptop form factor housing a Keyboardio Atreus keyboard,
  Mecha Comet trackpad device, and UPERFECT 13.3" OLED display.
maintainer: Greg Pfeil <greg@technomadic.org>
author: Greg Pfeil <greg@technomadic.org>
copyright: 2026 Greg Pfeil
license: AGPL-3.0-only WITH Universal-FOSS-exception-1.0 OR LicenseRef-proprietary
license-files:
  LICENSE
  LICENSE.AGPL-3.0-only
  LICENSE.Universal-FOSS-exception-1.0
  LICENSE.proprietary
category:
build-type: Custom
extra-doc-files:
  CHANGELOG.md
  README.md
  docs/*.md
tested-with:
  GHC == {
    9.10.1, 9.10.2, 9.10.3,
    9.12.1, 9.12.2,
    9.14.1
  }

homepage: https://github.com/sellout/frankentop#readme
bug-reports: https://github.com/sellout/frankentop/issues

source-repository head
  type: git
  location: https://github.com/sellout/frankentop.git
  subdir: core

source-repository this
  type: git
  location: https://github.com/sellout/frankentop.git
  subdir: core
  -- NB: This is the repo version, which is distinct from the package version.
  tag: v0.1.0

custom-setup
  setup-depends:
    -- TODO: Due to haskell/cabal#3751, `Cabal` has to be specified even though
    --       there’s no direct dependency. Its lower bound needs to be at least
    --       as high as `cabal-version` at the top of this file, and Hackage
    --       requires it to have _some_ upper bound. (Since there’s no direct
    --       dependency, it doesn’t use PVP bounds.)
    --
    -- TODO: Due to haskell/cabal#9375, 3.10.3 is required in order to load
    --       plugins from a `ghc-options` field. Unfortunately, GHCs prior to
    --       9.8.3 include an older Cabal, so a newer one may need to be
    --       manually installed.
    Cabal >= 3.10.3 && < 99,
    base ^>= {4.20.0, 4.21.0, 4.22.0},
    cabal-doctest ^>= {1.0.0},

flag lint
  description:
    Build with linting plugins enabled. This is intended for developers of this
    package.
  default: False
  -- Because disabling this flag won’t help the solver.
  manual: True

common defaults
  default-language: GHC2024
  build-depends:
    base ^>= {4.20.0, 4.21.0, 4.22.0},
    ghc-compat-plugin ^>= {0.1.0},
  ghc-options:
    -Weverything
    -- This one just reports unfixable things, AFAICT.
    -Wno-all-missed-specialisations
    -- Type inference good.
    -Wno-missing-local-signatures
    -- Warns even when `Unsafe` is explicit, not inferred. See
    -- https://gitlab.haskell.org/ghc/ghc/-/issues/16689
    -Wno-unsafe
    -fplugin GhcCompat
    -fplugin-opt GhcCompat:minVersion=9.10.1
    -fplugin-opt GhcCompat:reportIncompatibleExtensions=error
  default-extensions:
    BlockArguments
    DefaultSignatures
    ExplicitNamespaces
    FunctionalDependencies
    LexicalNegation
    LiberalTypeSynonyms
    PackageImports
    ParallelListComp
    QualifiedDo
    RecursiveDo
    RequiredTypeArguments
    StrictData
    TemplateHaskellQuotes
    TransformListComp
    NoGeneralizedNewtypeDeriving
    NoImplicitPrelude
    NoMonomorphismRestriction
    NoPatternGuards
    NoStarIsType
    NoTypeApplications
  if flag(lint)
    build-depends:
      henforcer ^>= {1.0.0},
      no-recursion ^>= {0.4.0},
    ghc-options:
      -fplugin Henforcer
      -fplugin NoRecursion

library
  import: defaults
  hs-source-dirs:
    src
  build-depends:
    implicit ^>= {0.4.1},
    linear ^>= {1.23.3},
  exposed-modules:
    Frankentop.Chassis

executable chassis
  import: defaults
  hs-source-dirs:
    app
  main-is: chassis.hs
  build-depends:
    frankentop-chassis,
    implicit ^>= {0.4.1},
  ghc-options:
    -O2
    -threaded

test-suite doctests
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is: doctests.hs
  build-depends:
    doctest ^>= {0.24.3},
    frankentop-chassis,
  ghc-options:
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-safe
    -- `doctest` requires the package containing the doctests as a dependency
    -- to ensure it gets built before this test-suite, even though the package
    -- appears to be unused.
    -Wno-unused-packages
  if impl(ghc >= 8.10.1)
    ghc-options:
  -- NB: Adjust this to contain any components that may have doctests (including
  --     executables).
  x-doctest-components:
    exe:chassis
    lib
  default-extensions:
    -- Since we can’t add `{-# LANGUAGE Safe -#}` to the generated
    -- “Build_doctests.hs”, we set it here, and that means it has to match
    -- doctests.hs, which is `Unsafe`.
    Unsafe
